@@ -6,6 +6,7 @@ import com.kncm.store.RoleStore;
 import com.kncm.validator.ValidationReport;
 import com.kncm.validator.Validator;
 import lombok.AllArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.HashMap;
 
@@ -19,7 +20,7 @@ public class CreateRoleValidator implements Validator<Role> {
         if (role == null) {
             report.setValid(false);
             report.addMessage(RoleConstant.ROLE, "role is null");
-        } else if (role.getName().isBlank()) {
+        } else if (StringUtils.isBlank(role.getName())) {
             report.setValid(false);
             report.addMessage(RoleConstant.NAME, "role must have name");
         } else if (store.exists(role.getName())) {
